--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Matouš Burýšek - vedení účetnictví">
+    <meta name="keywords" content="účetnictví, Brno, podvojné účetnictví, daňová evidence, mzdy, mzdová agenda, mzdové účetnictví, Matouš Burýšek">
+    <meta name="author" content="Vít Křížka">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matouš Burýšek - vedení účetnictví</title>
