add semantic tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>Matouš Burýšek - vedení účetnictví</title>
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
