--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
 
     <header>
-        <nav></nav>
+        <h1>Matouš Burýšek - vedení účetcnitví</h1>
+        <nav>
+            <ul>
+                <li>O mně</li>
+                <li>Články</li>
+                <li>Kontakt</li>
+            </ul>
+        </nav>
     </header>
 
     <main>
