--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matouš Burýšek - vedení účetnictví</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>
 
@@ -92,5 +93,8 @@
         <p>info@ucetnictvi-burysek.cz</p>
         <p>+420 721 880 875</p>
     </footer>
+
+    <script src="bootstrap/js/bootstrap.js"></script>
+
 </body>
 </html>
