--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- 1. ROW: HEADER -->
     <header class="row container text-bg-dark">
-        <nav class="navbar navbar-dark navbar-expand-lg">
+        <nav class="navbar navbar-dark navbar-expand-lg p-5 pt-2 pb-1">
             <a class="navbar-brand" href="#">
                 <div class="d-md-none"><h1>Matouš Burýšek<br>vedení účetnictví</h1></div>
                 <div class="d-none d-md-block"><h1>Matouš Burýšek - vedení účetnictví</h1></div>
@@ -42,13 +42,18 @@
     <main>
 
          <!-- 2. ROW: JUMBOTRON -->
-        <section id="vedeni-ucetnictvi" class="container row" style="color: white; height: 400px; background-image: url(https://picsum.photos/1300/400?grayscale);">
-            <h1>Vedení účetnictví</h1>
-            <h2>Daňová evidence, podvojné účetnictví, mzdové účetnictví</h2>
+         <section id="vedeni-ucetnictvi" class="container row jumbotron" style="color: black; height: 400px; background-image: url(https://thumbs.dreamstime.com/z/saving-stack-coins-money-calculator-charts-graphs-spreadsheet-paper-finance-account-saving-stack-coins-money-calculator-charts-213257459.jpg);">
+            <div class="p-5 mb-4 rounded-3">
+                <div class="container-fluid py-5">
+                    <h1 class="display-5 fw-bold">Vedení účetnictví</h1>
+                    <p class="col-md-8 fs-4">daňová evidence, podvojné účetnictví, mzdové účetnictví</p>
+                    <button class="btn btn-primary btn-lg" type="button">Nezávazně poptat účetní služby</button>
+                </div>
+            </div>
         </section>
 
         <!-- 3: ROW: SLUŽBY -->
-        <section id="sluzby" class="container row">
+        <section id="sluzby" class="container row p-5">
             <div class="container col-md">
                 <article id="sluzby-ucetnictvi" class="row">
                     <div class="col-1">
@@ -56,8 +61,8 @@
                     </div>
                     <div class="col-11">
                         <h3>Účetnictví</h3>
-                    <h5>vedení podvojného účetnictví</h5>
-                    <p>Zpracování podvojného účetnictví pro právnické osoby nebo fyzické osoby vedoucí účetnictví povinně či dobrovolně. Zastupování na příslušných úřadech. Zpracování výkazů pro klienty.</p>
+                        <h5>vedení podvojného účetnictví</h5>
+                        <p>Zpracování podvojného účetnictví pro právnické osoby nebo fyzické osoby vedoucí účetnictví povinně či dobrovolně. Zastupování na příslušných úřadech. Zpracování výkazů pro klienty.</p>
                     </div>
                 </article>
                 <article id="sluzby-mzdove-ucetnictvi" class="row">
@@ -97,17 +102,23 @@
 
         <!-- 4. ROW: O MNĚ -->
         <section id="matous-burysek" class="container row text-bg-secondary">
+            <div class="d-md-none">
+                <h1>Matouš Burýšek</h1>
+                <h5>účetní, mzdový účetní</h5>
+            </div>
             <div class="col-md-5">
                 <img src="https://picsum.photos/320/500">
             </div>
             <div class="col-md-7">
-            <h3>Matouš Burýšek</h3>
-            <h5>účetní, mzdový účetní</h5>
-            <p>V současné době podnikám v oblasti účetních poradců, vedení účetnictví, vedení daňové evidence a zpracování mezd. Při práci využívám účetní software POHODA a pro personalistiku a mzdy software PAMICA.</p>
-            <h4>Pracovní zkušenosti</h4>
-            <p>V roce 2018 jsem začínal na pozici junior účetní ve středně velké společnosti, kde jsem zpracovával vydané a přijaté faktury (tuzemské i zahraniční), evidoval majetek a spravoval skladové karty. V oce 2019 jsem přestoupil do účetní společnosti, která poskytovala ekonomické služby pro holding Vendeavour Service, na pozici samostatného účetního.</p>
-            <h4>Vzdělávání</h4>
-            <p>V poslední době jsem absolvoval kurzy Roční zúčtování mezd, Zdaňování příjmů ze závislé činnosti a Legislativní aktuality v vzdělávací agentuře INTEGRA CENTRUM, s.r.o. Jsem držitelem příslušných certifikátů.</p>
+                <div class="d-none d-md-block">
+                    <h3>Matouš Burýšek</h3>
+                    <h5>účetní, mzdový účetní</h5>
+                </div>
+                <p>V současné době podnikám v oblasti účetních poradců, vedení účetnictví, vedení daňové evidence a zpracování mezd. Při práci využívám účetní software POHODA a pro personalistiku a mzdy software PAMICA.</p>
+                <h4>Pracovní zkušenosti</h4>
+                <p>V roce 2018 jsem začínal na pozici junior účetní ve středně velké společnosti, kde jsem zpracovával vydané a přijaté faktury (tuzemské i zahraniční), evidoval majetek a spravoval skladové karty. V oce 2019 jsem přestoupil do účetní společnosti, která poskytovala ekonomické služby pro holding Vendeavour Service, na pozici samostatného účetního.</p>
+                <h4>Vzdělávání</h4>
+                <p>V poslední době jsem absolvoval kurzy Roční zúčtování mezd, Zdaňování příjmů ze závislé činnosti a Legislativní aktuality v vzdělávací agentuře INTEGRA CENTRUM, s.r.o. Jsem držitelem příslušných certifikátů.</p>
             </div>
         </section>
 
