--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matouš Burýšek - vedení účetnictví</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
 
     <!-- 1. ROW: HEADER -->
-    <header class="row container text-bg-dark">
-        <nav class="navbar navbar-dark navbar-expand-lg p-5 pt-2 pb-1">
+    <header class="row text-bg-dark">
+        <nav class="navbar navbar-dark navbar-expand-lg">
             <a class="navbar-brand" href="#">
-                <div class="d-md-none"><h1>Matouš Burýšek<br>vedení účetnictví</h1></div>
-                <div class="d-none d-md-block"><h1>Matouš Burýšek - vedení účetnictví</h1></div>
+                <div class="d-md-none p-3 pt-2 pb-1"><h1>Matouš Burýšek<br>vedení účetnictví</h1></div>
+                <div class="d-none d-md-block p-5 pt-2 pb-1"><h1>Matouš Burýšek - vedení účetnictví</h1></div>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +43,7 @@
     <main>
 
          <!-- 2. ROW: JUMBOTRON -->
-         <section id="vedeni-ucetnictvi" class="container row jumbotron" style="color: black; height: 400px; background-image: url(https://thumbs.dreamstime.com/z/saving-stack-coins-money-calculator-charts-graphs-spreadsheet-paper-finance-account-saving-stack-coins-money-calculator-charts-213257459.jpg);">
+         <section id="vedeni-ucetnictvi" class="row jumbotron">
             <div class="p-5 mb-4 rounded-3">
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Vedení účetnictví</h1>
@@ -53,7 +54,7 @@
         </section>
 
         <!-- 3: ROW: SLUŽBY -->
-        <section id="sluzby" class="container row p-5">
+        <section id="sluzby" class="row p-5">
             <div class="container col-md">
                 <article id="sluzby-ucetnictvi" class="row">
                     <div class="col-1">
@@ -101,7 +102,7 @@
         </section>
 
         <!-- 4. ROW: O MNĚ -->
-        <section id="matous-burysek" class="container row text-bg-secondary">
+        <section id="matous-burysek" class="row text-bg-secondary">
             <div class="d-md-none">
                 <h1>Matouš Burýšek</h1>
                 <h5>účetní, mzdový účetní</h5>
@@ -123,12 +124,12 @@
         </section>
 
         <!-- 5. ROW TLAČÍTKO -->
-        <section id="poptavka" class="container row text-bg-dark">
+        <section id="poptavka" class="row text-bg-dark">
             <button>Nezávazně poptat moje služby</button>
         </section>
 
         <!-- 6. ROW SOFTWARE -->
-        <section id="ucetni-software" class="container row">
+        <section id="ucetni-software" class="row">
             <article id="software-pohoda" class="row">
                 <div class="col-2">
                     <img src="https://picsum.photos/80">
@@ -152,7 +153,7 @@
     </main>
 
     <!-- 7. ROW: FOOTER -->
-    <footer class="container row text-bg-dark">
+    <footer class="row text-bg-dark">
         <p>Matouš Burýšek, Hostěradská 249, Dambořice, +420 721 880 875</p>
         <p>Hostěradská 249, Dambořice</p>
         <p>info@ucetnictvi-burysek.cz</p>
