--- a/index.html
+++ b/index.html
@@ -57,44 +57,44 @@
         <section id="sluzby" class="row p-5">
             <div class="container col-md">
                 <article id="sluzby-ucetnictvi" class="row">
-                    <div class="col-1">
-                        <img src="https://picsum.photos/50">
+                    <div class="col-2">
+                        <img src="./assets/icons/ucetnictvi.png">
                     </div>
-                    <div class="col-11">
+                    <div class="col-10">
                         <h3>Účetnictví</h3>
-                        <h5>vedení podvojného účetnictví</h5>
+                        <h5 class="text-secondary">vedení podvojného účetnictví</h5>
                         <p>Zpracování podvojného účetnictví pro právnické osoby nebo fyzické osoby vedoucí účetnictví povinně či dobrovolně. Zastupování na příslušných úřadech. Zpracování výkazů pro klienty.</p>
                     </div>
                 </article>
                 <article id="sluzby-mzdove-ucetnictvi" class="row">
-                    <div class="col-1">
-                        <img src="https://picsum.photos/50">
+                    <div class="col-2">
+                        <img src="./assets/icons/mzdove-ucetnictvi.png">
                     </div>
-                    <div class="col-11">
+                    <div class="col-10">
                         <h3>Mzdové účetnictví</h3>
-                        <h5>zpracování mezd od A do Z</h5>
+                        <h5 class="text-secondary">zpracování mezd od A do Z</h5>
                         <p>Komplexní zpracování mzdové agendy včetně zastupování na příslušných úřadech. Evidence exekucí a insolvence. Poskytování součinnosti pro exekutory a insolvenční správce.</p>
                     </div>
                 </article>
             </div>
             <div class="container col-md">
                 <article id="sluzby-danova-evidence" class="row">
-                    <div class="col-1">
-                        <img src="https://picsum.photos/50">
+                    <div class="col-2">
+                        <img src="./assets/icons/danova-evidence.png">
                     </div>
-                    <div class="col-11">
+                    <div class="col-10">
                         <h3>Daňová evidence</h3>
-                        <h5>vedení peněžního deníku</h5>
+                        <h5 class="text-secondary">vedení peněžního deníku</h5>
                         <p>Zpracování daňové evidence pro fyzické osoby vedoucí peněžní deník nebo paušální výdaje.</p>
                     </div>
                 </article>
-                <article id="sluzby-danova-evidence" class="row">
-                    <div class="col-1">
-                        <img src="https://picsum.photos/50">
+                <article id="sluzby-danove-priznani" class="row">
+                    <div class="col-2">
+                        <img src="./assets/icons/danove-priznani.png">
                     </div>
-                    <div class="col-11">
+                    <div class="col-10">
                         <h3>Daňové přiznání</h3>
-                        <h5>zpracování daňového přiznání</h5>
+                        <h5 class="text-secondary">zpracování daňového přiznání</h5>
                         <p>Zpracování daňové evidence pro fyzické osoby vedoucí peněžní deník nebo paušální výdaje.</p>
                     </div>
                 </article>
