--- a/index.html
+++ b/index.html
@@ -53,51 +53,51 @@
             </div>
         </section>
 
-        <!-- 3: ROW: SLUŽBY -->
-        <section id="sluzby" class="row p-5">
-            <div class="container col-md">
-                <article id="sluzby-ucetnictvi" class="row">
-                    <div class="col-2">
-                        <img src="./assets/icons/ucetnictvi.png">
-                    </div>
-                    <div class="col-10">
-                        <h3>Účetnictví</h3>
-                        <h5 class="text-secondary">vedení podvojného účetnictví</h5>
-                        <p>Zpracování podvojného účetnictví pro právnické osoby nebo fyzické osoby vedoucí účetnictví povinně či dobrovolně. Zastupování na příslušných úřadech. Zpracování výkazů pro klienty.</p>
-                    </div>
-                </article>
-                <article id="sluzby-mzdove-ucetnictvi" class="row">
-                    <div class="col-2">
-                        <img src="./assets/icons/mzdove-ucetnictvi.png">
-                    </div>
-                    <div class="col-10">
-                        <h3>Mzdové účetnictví</h3>
-                        <h5 class="text-secondary">zpracování mezd od A do Z</h5>
-                        <p>Komplexní zpracování mzdové agendy včetně zastupování na příslušných úřadech. Evidence exekucí a insolvence. Poskytování součinnosti pro exekutory a insolvenční správce.</p>
-                    </div>
-                </article>
+        <!-- 3: ROW: SLUŽBY - NOVÁ -->
+        <section id="sluzby" class="row ms-2 ms-md-none">
+            <div class="row px-2 pt-4 pb-3 px-md-5 pb-md-3 pt-md-5">
+                <div class="col-md">
+                    <article id="sluzby-ucetnictvi" class="row">
+                        <img class="col-auto" src="./assets/icons/ucetnictvi.png" width="64" height="64">
+                        <div class="col">
+                            <h3>Účetnictví</h3>
+                            <h5 class="text-secondary">vedení podvojného účetnictví</h5>
+                            <p>Zpracování podvojného účetnictví pro právnické osoby nebo fyzické osoby vedoucí účetnictví povinně či dobrovolně. Zastupování na příslušných úřadech. Zpracování výkazů pro klienty.</p>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-md">
+                    <article id="sluzby-mzdove-ucetnictvi" class="row">
+                            <img class="col-auto" src="./assets/icons/mzdove-ucetnictvi.png" width="64" height="64">
+                            <div class="col">
+                                <h3>Mzdové účetnictví</h3>
+                                <h5 class="text-secondary">zpracování mezd od A do Z</h5>
+                                <p>Komplexní zpracování mzdové agendy včetně zastupování na příslušných úřadech. Evidence exekucí a insolvence. Poskytování součinnosti pro exekutory a insolvenční správce.</p>
+                            </div>
+                    </article>
+                </div>
             </div>
-            <div class="container col-md">
-                <article id="sluzby-danova-evidence" class="row">
-                    <div class="col-2">
-                        <img src="./assets/icons/danova-evidence.png">
-                    </div>
-                    <div class="col-10">
-                        <h3>Daňová evidence</h3>
-                        <h5 class="text-secondary">vedení peněžního deníku</h5>
-                        <p>Zpracování daňové evidence pro fyzické osoby vedoucí peněžní deník nebo paušální výdaje.</p>
-                    </div>
-                </article>
-                <article id="sluzby-danove-priznani" class="row">
-                    <div class="col-2">
-                        <img src="./assets/icons/danove-priznani.png">
-                    </div>
-                    <div class="col-10">
-                        <h3>Daňové přiznání</h3>
-                        <h5 class="text-secondary">zpracování daňového přiznání</h5>
-                        <p>Zpracování daňové evidence pro fyzické osoby vedoucí peněžní deník nebo paušální výdaje.</p>
-                    </div>
-                </article>
+            <div class="row px-2 pb-4 px-md-5 pb-md-5">
+                <div class="col-md">
+                    <article id="sluzby-danova-evidence" class="row">
+                        <img class="col-auto" src="./assets/icons/danova-evidence.png" width="64" height="64">
+                        <div class="col">
+                            <h3>Daňová evidence</h3>
+                            <h5 class="text-secondary">vedení peněžního deníku</h5>
+                            <p>Zpracování daňové evidence pro fyzické osoby vedoucí peněžní deník nebo paušální výdaje.</p>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-md">
+                    <article id="sluzby-danove-priznani" class="row">
+                        <img class="col-auto" src="./assets/icons/danove-priznani.png" width="64" height="64">
+                        <div class="col">
+                            <h3>Daňové přiznání</h3>
+                            <h5 class="text-secondary">zpracování daňového přiznání</h5>
+                            <p>Zpracování daňové evidence pro fyzické osoby vedoucí peněžní deník nebo paušální výdaje.</p>
+                        </div>
+                    </article>
+                </div>
             </div>
         </section>
 
