jumbotron, navbar - padding, margin

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
     <!-- 1. ROW: HEADER -->
     <header class="row text-bg-dark">
-        <nav class="navbar navbar-dark navbar-expand-lg">
-            <a class="navbar-brand" href="#">
-                <div class="d-md-none p-3 pt-2 pb-1"><h1>Matouš Burýšek<br>vedení účetnictví</h1></div>
-                <div class="d-none d-md-block p-5 pt-2 pb-1"><h1>Matouš Burýšek - vedení účetnictví</h1></div>
+        <nav class="navbar navbar-dark navbar-expand-lg px-3 px-md-5">
+            <a class="navbar-brand px-3 px-md-2" href="#">
+                <div class="d-md-none"><h1>Matouš Burýšek<br>účetní</h1></div>
+                <div class="d-none d-md-block"><h1>Matouš Burýšek - účetní</h1></div>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-3 ms-md-2 ms-lg-auto mb-2 mb-md-0">
                     <li class="nav-item">
                         <a class="nav-link" href="#">O mně</a>
                     </li>
@@ -44,7 +44,7 @@
 
          <!-- 2. ROW: JUMBOTRON -->
          <section id="vedeni-ucetnictvi" class="row jumbotron">
-            <div class="p-5 mb-4 rounded-3">
+            <div class="p-3 p-md-5 rounded-3">
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Vedení účetnictví</h1>
                     <p class="col-md-8 fs-4">daňová evidence, podvojné účetnictví, mzdové účetnictví</p>
@@ -53,7 +53,7 @@
             </div>
         </section>
 
-        <!-- 3: ROW: SLUŽBY - NOVÁ -->
+        <!-- 3: ROW: SLUŽBY -->
         <section id="sluzby" class="row ms-2 ms-md-none">
             <div class="row px-2 pt-4 pb-3 px-md-5 pb-md-3 pt-md-5">
                 <div class="col-md">
