--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body class="container">
 
     <!-- 1. ROW: HEADER -->
+
     <header class="row text-bg-dark">
         <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
             <a class="navbar-brand px-3 px-md-2" href="#">
@@ -47,6 +48,7 @@
     <main>
 
          <!-- 2. ROW: JUMBOTRON -->
+
          <section id="vedeni-ucetnictvi" class="row jumbotron">
             <div class="p-3 p-md-5 rounded-3">
                 <div class="container-fluid py-5">
@@ -58,6 +60,7 @@
         </section>
 
         <!-- 3: ROW: SLUŽBY -->
+
         <section id="sluzby" class="row bg-light ms-2 ms-md-none">
             <div class="row px-2 pt-4 pb-3 px-md-5 pb-md-3 pt-md-5">
                 <div class="col-md">
@@ -72,7 +75,7 @@
                 </div>
                 <div class="col-md">
                     <article id="sluzby-mzdove-ucetnictvi" class="row">
-                            <img class="col-auto" src="./assets/icons/mzdove-ucetnictvi.png" width="64" height="64">
+                            <img class="col-auto" src="./assets/icons/mzdove-ucetnictvi.png" alt="ikona - mzdové účetnictví" width="64" height="64">
                             <div class="col">
                                 <h3>Mzdové účetnictví</h3>
                                 <h5 class="text-secondary">zpracování mezd od A do Z</h5>
@@ -84,7 +87,7 @@
             <div class="row px-2 pb-4 px-md-5 pb-md-5">
                 <div class="col-md">
                     <article id="sluzby-danova-evidence" class="row">
-                        <img class="col-auto" src="./assets/icons/danova-evidence.png" width="64" height="64">
+                        <img class="col-auto" src="./assets/icons/danova-evidence.png" alt="ikona - daňová evidence" width="64" height="64">
                         <div class="col">
                             <h3>Daňová evidence</h3>
                             <h5 class="text-secondary">vedení peněžního deníku</h5>
@@ -94,7 +97,7 @@
                 </div>
                 <div class="col-md">
                     <article id="sluzby-danove-priznani" class="row">
-                        <img class="col-auto" src="./assets/icons/danove-priznani.png" width="64" height="64">
+                        <img class="col-auto" src="./assets/icons/danove-priznani.png" alt="ikona - daňové přiznání" width="64" height="64">
                         <div class="col">
                             <h3>Daňové přiznání</h3>
                             <h5 class="text-secondary">zpracování daňového přiznání</h5>
@@ -106,6 +109,7 @@
         </section>
 
         <!-- 4. ROW: O MNĚ -->
+
         <section id="matous-burysek" class="row text-bg-secondary text-white p-3 p-md-5">
             <div class="d-md-none text-center">
                 <h2 class="mb-1">Matouš Burýšek</h2>
@@ -113,8 +117,8 @@
             </div>
             
             <div class="col-auto mx-auto">
-                <img class="d-none d-md-block" src="./assets/photos/nahodny-typek.png" width="300">
-                <img class="d-md-none d-md" src="./assets/photos/nahodny-typek.png" width="200">
+                <img class="d-none d-md-block" src="./assets/photos/nahodny-typek.png" alt="Matouš Burýšek - fotografie" width="300">
+                <img class="d-md-none d-md" src="./assets/photos/nahodny-typek.png" alt="Matouš Burýšek - fotografie" width="200">
             </div>
             
             <div class="col">
@@ -134,27 +138,31 @@
         </section>
 
         <!-- 5. ROW TLAČÍTKO -->
+
         <section id="poptavka" class="text-center bg-light p-5">
             <button class="btn btn-primary btn-lg text-uppercase">Nezávazně poptat moje služby</button>
         </section>
 
         <!-- 6. ROW SOFTWARE -->
-        <section id="ucetni-software" class="row">
+
+        <section id="ucetni-software" class="row text-bg-secondary text-white p-3 p-md-5">
             <article id="software-pohoda" class="row">
-                <div class="col-2">
-                    <img src="https://picsum.photos/80">
+                <div class="d-md-none text-center"><h3>Účtuji v POHODĚ</h3></div>
+                <div class="col-auto mx-auto">
+                    <img src="./assets/images/POHODA-box.png" alt="logo POHODA - účetní software" width="200">
                 </div>
-                <div class="col-10">
-                    <h3>Účtuji v POHODĚ</h3>
+                <div class="col">
+                    <div class="d-none d-md-block"><h3>Účtuji v POHODĚ</h3></div>
                     <p>Umožňuje vést účetnictví i daňovou evidenci a vyhoví plátcům i neplátcům DPH. Systém je oborově neutrální a je vhodný nejen pro živnostníky, podnikatele a společnosti, které se zabývají obchodem a poskytováním služeb, ale i pro svobodná povolání a účtující příspěvkové a neziskové organizace.</p>            
                 </div>
             </article>
             <article id="software-pamica" class="row">
-                <div class="col-2">
-                    <img src="https://picsum.photos/80">
+                <div class="d-md-none text-center"><h3>Personalistika a mzdy v PAMICE</h3></div>
+                <div class="col-auto mx-auto">
+                    <img src="./assets/images/PAMICA-box.png" alt="logo PAMICA - software pro mzdové účetnictví" width="200">
                 </div>
-                <div class="col-10">
-                    <h3>Personalistika a mzdy v PAMICE</h3>
+                <div class="col">
+                    <h3 class="d-none d-md-block">Personalistika a mzdy v PAMICE</h3>
                     <p>PAMICA je profesionální nástroj na vedení agend personalistiky, pracovních poměrů a zpracování mezd zaměstnanců. Tento software ocení firmy jak s vlastní personální kanceláří, nebo s větším počtem klientů, stejně tak účetní firmy vyžadující profesionální správu dat zaměstnanců a jejich mezd. Práce je možná samostatně ale s případnými exporty závazků a pohledávek do účetního programu POHODA. Aplikace podporuje případné xml importy z docházkových systémů.</p>
                 </div>
             </article>
@@ -163,6 +171,7 @@
     </main>
 
     <!-- 7. ROW: FOOTER -->
+
     <footer class="row bg-dark text-center text-white">
         <div class="container p-4">
           <section class="mb-4">
@@ -246,6 +255,5 @@
     </footer>
 
     <script src="bootstrap/js/bootstrap.js"></script>
-
 </body>
 </html>
