odkazy na stránky články a kontakt

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header class="row text-bg-dark">
         <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
-            <a class="navbar-brand px-3 px-md-2" href="#">
+            <a class="navbar-brand px-3 px-md-2" href="./index.html">
                 <div class="d-md-none"><h1>Matouš Burýšek<br>účetní</h1></div>
                 <div class="d-none d-md-block"><h1>Matouš Burýšek - účetní</h1></div>
             </a>
@@ -34,10 +34,10 @@
                         <a class="nav-link" href="#sluzby">Služby</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Články</a>
+                        <a class="nav-link" href="./pages/clanky.html">Články</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Kontakt</a>
+                        <a class="nav-link" href="./pages/kontakt.html">Kontakt</a>
                     </li> 
                 </ul>
             </div>
