--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -85,8 +85,7 @@
 
                 <div class="col-md-5 col-12">
                   <div class="form-outline form-white mb-4">
-                    <input type="email" id="form5Example21" class="form-control" />
-                    <label class="form-label" for="form5Example21">e-mailová adresa</label>
+                    <input type="email" id="form5Example21" class="form-control" placeholder="Vaše e-mailová adresa"/>
                   </div>
                 </div>
 
