--- a/pages/clanky.html
+++ b/pages/clanky.html
@@ -139,6 +139,6 @@
         </div>
     </footer>
 
-    <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
