--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -138,6 +138,6 @@
         </div>
     </footer>
 
-    <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
