--- a/pages/clanky.html
+++ b/pages/clanky.html
@@ -84,11 +84,10 @@
                 </div>
 
                 <div class="col-md-5 col-12">
-                  <div class="form-outline form-white mb-4">
-                    <input type="email" id="form5Example21" class="form-control" />
-                    <label class="form-label" for="form5Example21">e-mailová adresa</label>
+                    <div class="form-outline form-white mb-4">
+                      <input type="email" id="form5Example21" class="form-control" placeholder="Vaše e-mailová adresa"/>
+                    </div>
                   </div>
-                </div>
 
                 <div class="col-auto">
                   <button type="submit" class="btn btn-outline-light mb-4">
