--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Matouš Burýšek - vedení účetnictví</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet"> -->
 </head>
 <body class="container">
 
@@ -18,9 +21,12 @@
 
     <header class="row text-bg-dark">
         <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
-            <a class="navbar-brand px-3 px-md-2" href="./index.html">
-                <div class="d-md-none"><h1>Matouš Burýšek<br>účetní</h1></div>
-                <div class="d-none d-md-block"><h1>Matouš Burýšek - účetní</h1></div>
+            <a class="navbar-brand d-md-none px-3 px-md-2" href="./index.html">
+                <h1>Matouš Burýšek<br>účetní</h1>
+            </a>
+            <a class="navbar-brand d-none d-md-block px-3 px-md-2" href="./index.html">
+                <img class="d-inline-block align-text-top" src="./assets/images/logo.png" height="50">
+                <h1 class="d-inline-block align-text-top ms-3">Matouš Burýšek - účetní</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,7 +60,7 @@
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold jumbotron-text">Vedení účetnictví</h1>
                     <p class="col-md-8 fs-4 jumbotron-text">daňová evidence, podvojné účetnictví, mzdové účetnictví</p>
-                    <button class="btn btn-primary btn-lg" type="button">Nezávazně poptat účetní služby</button>
+                    <button class="btn btn-primary btn-lg" type="button" onclick="openContactBox()">Nezávazně poptat účetní služby</button>
                 </div>
             </div>
         </section>
@@ -141,7 +147,7 @@
         <!-- 5. ROW TLAČÍTKO -->
 
         <section id="poptavka" class="text-center bg-light p-5">
-            <button class="btn btn-primary btn-lg text-uppercase">Nezávazně poptat moje služby</button>
+            <button class="btn btn-primary btn-lg text-uppercase" onclick="openContactBox()">Nezávazně poptat moje služby</button>
         </section>
 
         <!-- 6. ROW SOFTWARE -->
@@ -256,6 +262,17 @@
         </div>
     </footer>
 
-    <script src="bootstrap/js/bootstrap.js"></script>
+    <!-- WINDOW: CONTACT -->
+    <div id="window-contact" class="container">
+        <p>Máte zájem o mé služny?</p>
+        <p>Vyplňte své kontaktní údaje a v nejbližší době se Vám ozvu. Zjistíme, jestli bychom spolu mohli spolupracovat.</p>
+        <form>
+            
+        </form>
+
+    </div>
+
+    <script src="./bootstrap/js/bootstrap.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
