přidány pracovní poznámky

--- a/pages/clanky.html
+++ b/pages/clanky.html
@@ -15,6 +15,7 @@
 <body class="container">
 
     <!-- 1. ROW: HEADER -->
+    <!-- nutné předělat na header jako v základním souboru - platí i pro footer -->
 
     <header class="row text-bg-dark">
         <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
