header a footer podle indexu + absolutní odkazy

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
     <header class="row text-bg-dark">
         <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
-            <a class="navbar-brand d-md-none px-3 px-md-2" href="./index.html">
+            <a class="navbar-brand d-md-none px-3 px-md-2" href="/index.html">
                 <h1>Matouš Burýšek<br>účetní</h1>
             </a>
-            <a class="navbar-brand d-none d-md-block px-3 px-md-2" href="./index.html">
-                <img class="d-inline-block align-text-top" src="./assets/images/logo.png" height="50">
+            <a class="navbar-brand d-none d-md-block px-3 px-md-2" href="/index.html">
+                <img class="d-inline-block align-text-top" src="/assets/images/logo.png" height="50">
                 <h1 class="d-inline-block align-text-top ms-3">Matouš Burýšek - účetní</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
