--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <!-- 4. ROW: O MNĚ -->
 
-        <section id="matous-burysek" class="row text-bg-secondary text-white p-3 p-md-5">
+        <section id="matous-burysek" class="row p-3 p-md-5">
             <div class="d-md-none text-center">
                 <h2 class="mb-1">Matouš Burýšek</h2>
                 <h5 class="mb-1"><em>účetní, mzdový účetní</em></h5>
@@ -136,11 +136,14 @@
 
                 <p>V současné době podnikám v oblasti účetních poradců, vedení účetnictví, vedení daňové evidence a zpracování mezd. Při práci využívám účetní software POHODA a pro personalistiku a mzdy software PAMICA.</p>
                 
-                <h4 class="mt-4 mb-1">Pracovní zkušenosti</h4>
+                <h4 class="mt-4 mb-1"><span class="text-primary">► </span>Pracovní zkušenosti</h4>
                 <p>V roce 2018 jsem začínal na pozici junior účetní ve středně velké společnosti, kde jsem zpracovával vydané a přijaté faktury (tuzemské i zahraniční), evidoval majetek a spravoval skladové karty. V oce 2019 jsem přestoupil do účetní společnosti, která poskytovala ekonomické služby pro holding Vendeavour Service, na pozici samostatného účetního.</p>
                 
-                <h4 class="mt-4 mb-1">Vzdělávání</h4>
+                <h4 class="mt-4 mb-1"><span class="text-primary">► </span>Vzdělávání</h4>
                 <p>V poslední době jsem absolvoval kurzy Roční zúčtování mezd, Zdaňování příjmů ze závislé činnosti a Legislativní aktuality v vzdělávací agentuře INTEGRA CENTRUM, s.r.o. Jsem držitelem příslušných certifikátů.</p>
+
+                <h4 class="mt-4 mb-1"><span class="text-primary">► </span>Přístup k účetnictví</h4>
+                <p>Účetnictví je nástroj pro sledování a zobrazení stavů, toků a výsledků ekonomické činnosti. Snažím se, aby bylo vedeno správně, úplně, průkazně, srozumitelně a přehledně, a to zejména s ohledem na požadavky klienta.</p>
             </div>
         </section>
 
@@ -152,7 +155,7 @@
 
         <!-- 6. ROW SOFTWARE -->
 
-        <section id="ucetni-software" class="row text-bg-secondary text-white p-3 p-md-5">
+        <section id="ucetni-software" class="row p-3 p-md-5">
             <article id="software-pohoda" class="row">
                 <div class="d-md-none text-center"><h3>Účtuji v POHODĚ</h3></div>
                 <img class="d-md-none px-5" src="./assets/images/POHODA-box.png" alt="logo POHODA - účetní software" width="200">
@@ -160,18 +163,18 @@
                     <img src="./assets/images/POHODA-box.png" alt="logo POHODA - účetní software" width="200">
                 </div>
                 <div class="col-md">
-                    <div class="d-none d-md-block"><h3>Účtuji v POHODĚ</h3></div>
-                    <p>Umožňuje vést účetnictví i daňovou evidenci a vyhoví plátcům i neplátcům DPH. Systém je oborově neutrální a je vhodný nejen pro živnostníky, podnikatele a společnosti, které se zabývají obchodem a poskytováním služeb, ale i pro svobodná povolání a účtující příspěvkové a neziskové organizace.</p>            
+                    <div class="d-none d-md-block"><h3><span class="text-primary">► </span>Účtuji v POHODĚ</h3></div>
+                    <p>POHODA umožňuje vést účetnictví i daňovou evidenci a vyhoví plátcům i neplátcům DPH. Systém je oborově neutrální a je vhodný nejen pro živnostníky, podnikatele a společnosti, které se zabývají obchodem a poskytováním služeb, ale i pro svobodná povolání a účtující příspěvkové a neziskové organizace.</p>            
                 </div>
             </article>
             <article id="software-pamica" class="row">
-                <div class="d-md-none text-center"><h3>Mzdy v PAMICE</h3></div>
+                <div class="d-md-none text-center"><h3><span class="text-primary">► </span>Mzdy v PAMICE</h3></div>
                 <img class="d-md-none px-5" src="./assets/images/PAMICA-box.png" alt="logo PAMICA - software pro mzdové účetnictví" width="200">
                 <div class="d-none d-md-block col-md-auto mx-auto">
                     <img src="./assets/images/PAMICA-box.png" alt="logo PAMICA - software pro mzdové účetnictví" width="200">
                 </div>
                 <div class="col-md">
-                    <div class="d-none d-md-block"><h3>Personalistika a mzdy v PAMICE</h3></div>
+                    <div class="d-none d-md-block"><h3><span class="text-primary">► </span>Personalistika a mzdy v PAMICE</h3></div>
                     <p>PAMICA je profesionální nástroj na vedení agend personalistiky, pracovních poměrů a zpracování mezd zaměstnanců. Tento software ocení firmy jak s vlastní personální kanceláří, nebo s větším počtem klientů, stejně tak účetní firmy vyžadující profesionální správu dat zaměstnanců a jejich mezd. Práce je možná samostatně ale s případnými exporty závazků a pohledávek do účetního programu POHODA. Aplikace podporuje případné xml importy z docházkových systémů.</p>
                 </div>
             </article>
