--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <header class="row text-bg-dark">
         <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
             <a class="navbar-brand d-md-none px-3 px-md-2" href="/index.html">
-                <h1>Matouš Burýšek<br>účetní</h1>
+                <h1>Účetnictví<br>Matouš Burýšek</h1>
             </a>
             <a class="navbar-brand d-none d-md-block px-3 px-md-2" href="/index.html">
                 <img class="d-inline-block align-text-top" src="/assets/images/logo.png" height="50">
-                <h1 class="d-inline-block align-text-top ms-3">Matouš Burýšek - účetní</h1>
+                <h1 class="d-inline-block align-text-top ms-3">Účetnictví Matouš Burýšek</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,8 +67,8 @@
 
         <!-- 3: ROW: SLUŽBY -->
 
-        <section id="sluzby" class="row bg-light ms-2 ms-md-none">
-            <div class="row px-2 pt-4 pb-3 px-md-5 pb-md-3 pt-md-5">
+        <section id="sluzby" class="row bg-light">
+            <div class="row px-3 px-md-5 pt-3 pt-md-5 pb-3 pb-md-3">
                 <div class="col-md">
                     <article id="sluzby-ucetnictvi" class="row">
                         <img class="col-auto" src="./assets/icons/ucetnictvi.png" width="64" height="64">
@@ -90,7 +90,7 @@
                     </article>
                 </div>
             </div>
-            <div class="row px-2 pb-4 px-md-5 pb-md-5">
+            <div class="row px-3 px-md-5 pb-3 pb-md-4">
                 <div class="col-md">
                     <article id="sluzby-danova-evidence" class="row">
                         <img class="col-auto" src="./assets/icons/danova-evidence.png" alt="ikona - daňová evidence" width="64" height="64">
@@ -107,7 +107,7 @@
                         <div class="col">
                             <h3>Daňové přiznání</h3>
                             <h5 class="text-secondary">zpracování daňového přiznání</h5>
-                            <p>Zpracování daňového přiznání  k dani z příjmu právnických a fyzických osob. Přiznání k dani silniční. Přiznání k dani z nemovitých věcí.</p>
+                            <p>Zpracování daňového přiznání k dani z příjmu právnických a fyzických osob, k silniční dani i k dani z nemovitých věcí.</p>
                         </div>
                     </article>
                 </div>
@@ -149,8 +149,10 @@
 
         <!-- 5. ROW TLAČÍTKO -->
 
-        <section id="poptavka" class="text-center bg-light p-5">
-            <button class="btn btn-primary btn-lg text-uppercase" onclick="openContactBox()">Nezávazně poptat moje služby</button>
+        <section id="poptavka" class="row bg-light py-5">
+            <div class="d-grid gap-2 col-8 col-md-4 mx-auto">
+                <button class="btn btn-primary btn-lg text-uppercase" onclick="openContactBox()">Nezávazně poptat účetní služby</button>
+            </div>
         </section>
 
         <!-- 6. ROW SOFTWARE -->
@@ -216,7 +218,7 @@
                     </div>
                   </div>
 
-                <div class="col-auto">
+                <div class="col-auto mb-2">
                   <button type="submit" class="btn btn-outline-light mb-4">
                     Mám zájem o služby
                   </button>
@@ -227,37 +229,37 @@
           <section>
             <div class="row">
               <div class="col-md-4 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Právní předpisy</h5>
+                <h5 class="text-uppercase fw-bold">Právní předpisy</h5>
       
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="https://www.zakonyprolidi.cz/cs/1991-563" class="text-white" target=”_blank”>zákon o účetnictví</a>
+                    <a href="https://www.zakonyprolidi.cz/cs/1991-563" target=”_blank”>zákon o účetnictví</a>
                   </li>
                   <li>
-                    <a href="https://www.zakonyprolidi.cz/cs/1992-586" class="text-white" target=”_blank”>zákon o daních z příjmů</a>
+                    <a href="https://www.zakonyprolidi.cz/cs/1992-586" target=”_blank”>zákon o daních z příjmů</a>
                   </li>
                   <li>
-                    <a href="https://www.zakonyprolidi.cz/cs/2004-235" class="text-white" target=”_blank”>zákon o dani z přidané hodnoty</a>
+                    <a href="https://www.zakonyprolidi.cz/cs/2004-235" target=”_blank”>zákon o dani z přidané hodnoty</a>
                   </li>
                   <li>
-                    <a href="https://www.zakonyprolidi.cz/cs/2009-280" class="text-white" target=”_blank”>daňový řád</a>
+                    <a href="https://www.zakonyprolidi.cz/cs/2009-280" target=”_blank”>daňový řád</a>
                   </li>
                 </ul>
               </div>
 
               <div class="col-md-4 mb-4 mb-md-0">
-                <h5 class="text-uppercase">KONTAKTUJTE MĚ</h5>
+                <h5 class="text-uppercase fw-bold">KONTAKTUJTE MĚ</h5>
       
-                <i class="bi bi-envelope"></i>&nbsp; info@ucetnictvi-burysek.cz<br>
-                <i class="bi bi-telephone"></i>&nbsp; +420 721 880 875
+                <i class="bi bi-envelope"></i>&nbsp; <a href="mailto:info@ucetnictvi-burysek.cz">info@ucetnictvi-burysek.cz</a><br>
+                <i class="bi bi-house"></i>&nbsp; <address class="d-inline"><a href="https://goo.gl/maps/8BHBp8RZEeXn9wsz9" target=”_blank”>Cejl 467/65, 602 00 Brno</a></address><br>
+                <i class="bi bi-telephone"></i>&nbsp; <a href="tel:+420721880875">+420 721 880 875</a>
               </div>
 
               <div class="col-md-4 mb-4 mb-md-0">
-                <h5 class="text-uppercase">INFORMACE O PODNIKATELI</h5>
+                <h5 class="text-uppercase fw-bold">INFORMACE O PODNIKATELI</h5>
                     Matouš Burýšek</br>
+                    vedení účetnictví</br>
                     IČO: 08498181</br>
-                    Soudní 467/1</br>
-                    602 00 BRNO</br>
               </div>
             </div>
           </section>
