--- a/pages/clanky.html
+++ b/pages/clanky.html
@@ -19,11 +19,11 @@
     <header class="row text-bg-dark">
       <nav class="navbar navbar-dark navbar-expand-lg py-3 px-3 px-md-5">
           <a class="navbar-brand d-md-none px-3 px-md-2" href="/index.html">
-              <h1>Matouš Burýšek<br>účetní</h1>
+              <h1>Účetnictví<br>Matouš Burýšek</h1>
           </a>
           <a class="navbar-brand d-none d-md-block px-3 px-md-2" href="/index.html">
               <img class="d-inline-block align-text-top" src="/assets/images/logo.png" height="50">
-              <h1 class="d-inline-block align-text-top ms-3">Matouš Burýšek - účetní</h1>
+              <h1 class="d-inline-block align-text-top ms-3">Účetnictví Matouš Burýšek</h1>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -31,16 +31,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-3 ms-md-2 ms-lg-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                      <a class="nav-link" href="/index.html#matous-burysek">O mně</a>
+                      <a class="nav-link" href="#matous-burysek">O mně</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/index.html#sluzby">Služby</a>
+                      <a class="nav-link" href="#sluzby">Služby</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="/pages/clanky.html">Články</a>
+                      <a class="nav-link" href="./pages/clanky.html">Články</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/pages/kontakt.html">Kontakt</a>
+                      <a class="nav-link" href="./pages/kontakt.html">Kontakt</a>
                   </li> 
               </ul>
           </div>
@@ -92,7 +92,7 @@
                   </div>
                 </div>
 
-              <div class="col-auto">
+              <div class="col-auto mb-2">
                 <button type="submit" class="btn btn-outline-light mb-4">
                   Mám zájem o služby
                 </button>
@@ -103,37 +103,37 @@
         <section>
           <div class="row">
             <div class="col-md-4 mb-4 mb-md-0">
-              <h5 class="text-uppercase">Právní předpisy</h5>
+              <h5 class="text-uppercase fw-bold">Právní předpisy</h5>
     
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="https://www.zakonyprolidi.cz/cs/1991-563" class="text-white" target=”_blank”>zákon o účetnictví</a>
+                  <a href="https://www.zakonyprolidi.cz/cs/1991-563" target=”_blank”>zákon o účetnictví</a>
                 </li>
                 <li>
-                  <a href="https://www.zakonyprolidi.cz/cs/1992-586" class="text-white" target=”_blank”>zákon o daních z příjmů</a>
+                  <a href="https://www.zakonyprolidi.cz/cs/1992-586" target=”_blank”>zákon o daních z příjmů</a>
                 </li>
                 <li>
-                  <a href="https://www.zakonyprolidi.cz/cs/2004-235" class="text-white" target=”_blank”>zákon o dani z přidané hodnoty</a>
+                  <a href="https://www.zakonyprolidi.cz/cs/2004-235" target=”_blank”>zákon o dani z přidané hodnoty</a>
                 </li>
                 <li>
-                  <a href="https://www.zakonyprolidi.cz/cs/2009-280" class="text-white" target=”_blank”>daňový řád</a>
+                  <a href="https://www.zakonyprolidi.cz/cs/2009-280" target=”_blank”>daňový řád</a>
                 </li>
               </ul>
             </div>
 
             <div class="col-md-4 mb-4 mb-md-0">
-              <h5 class="text-uppercase">KONTAKTUJTE MĚ</h5>
+              <h5 class="text-uppercase fw-bold">KONTAKTUJTE MĚ</h5>
     
-              <i class="bi bi-envelope"></i>&nbsp; info@ucetnictvi-burysek.cz<br>
-              <i class="bi bi-telephone"></i>&nbsp; +420 721 880 875
+              <i class="bi bi-envelope"></i>&nbsp; <a href="mailto:info@ucetnictvi-burysek.cz">info@ucetnictvi-burysek.cz</a><br>
+              <i class="bi bi-house"></i>&nbsp; <address class="d-inline"><a href="https://goo.gl/maps/8BHBp8RZEeXn9wsz9" target=”_blank”>Cejl 467/65, 602 00 Brno</a></address><br>
+              <i class="bi bi-telephone"></i>&nbsp; <a href="tel:+420721880875">+420 721 880 875</a>
             </div>
 
             <div class="col-md-4 mb-4 mb-md-0">
-              <h5 class="text-uppercase">INFORMACE O PODNIKATELI</h5>
+              <h5 class="text-uppercase fw-bold">INFORMACE O PODNIKATELI</h5>
                   Matouš Burýšek</br>
+                  vedení účetnictví</br>
                   IČO: 08498181</br>
-                  Soudní 467/1</br>
-                  602 00 BRNO</br>
             </div>
           </div>
         </section>
