odstraněn required u checkboxu

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="check">
-                <label class="form-check-label" for="check" required>Beru na vědomí Zásady ochrany osobních údajů.</label>
+                <label class="form-check-label" for="check">Beru na vědomí Zásady ochrany osobních údajů.</label>
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-dark btn-lg text-uppercase">Odeslat</button>
